# cppsvc

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HACKING.md  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: docs.cmake  in-source-guard.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  variables.cmake  windows-set-path.cmake
docs/: Doxyfile.in
example/: CMakeLists.txt
include/cppsvc/: cppsvc.hpp  service.hpp
install/include/cppsvc/cppsvc/: cppsvc.hpp
install/share/cppsvc/: cppsvcConfig.cmake  cppsvcConfigVersion.cmake  cppsvcTargets.cmake
test/: CMakeLists.txt
test/source/: cppsvc_test.cpp
